--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,4 @@ github_username:  michelleplunkett
 markdown: redcarpet
 highlighter: pygments
 github: https://github.com/michelleplunkett/michelleplunkett.github.io
+permalink: /blog/:year/:month/:day/:title
