--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Michelle Plunkett
-email: michellep1994@gmail.com
+email: michellejplunkett@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   This is Michelle Plunkett's website.
 baseurl: "" # the subpath of your site, e.g. /blog/
