added more projects

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ github_username:  michelleplunkett
 # Build settings
 markdown: kramdown
 gems: [jekyll-paginate]
-highlighter: pygments
+highlighter: rouge
 
 # Pagination
 paginate: 15
