--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,10 @@ github_username:  michelleplunkett
 markdown: kramdown
 gems: [jekyll-paginate]
 highlighter: rouge
+excerpt_separator: <!--more-->
 
 # Pagination
-paginate: 15
+paginate: 10
 paginate_path: "/blog/page:num/"
 
 collections:
