--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ excerpt_separator: <!--more-->
 
 # Pagination
 paginate: 10
-# paginate_path: "/blog/page:num/"
+paginate_path: "/page:num/"
 
 collections:
   portfolio:
