--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: michelle plunkett
+title: Michelle Plunkett
 email: michellejplunkett@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Michelle Plunkett's website.
